tests/snapshots/validator_snapshots__validator_all@validator-71.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/parser/parse_optional_generic_params.of
---
Ok
