tests/snapshots/validator_snapshots__validator_all@validator-72.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/parser/parse_function_no_params.of
---
Ok
