tests/snapshots/validator_snapshots__validator_all@validator-73.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/parser/parse_function_no_body.of
---
Ok
