tests/snapshots/validator_snapshots__validator_all@validator-74.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/parser/parse_extern_function_with_body.of
---
ValidationErrors(
    [
        "unknown type 'MyStruct' in module 'test_module'",
    ],
)
