tests/snapshots/validator_snapshots__validator_all@validator-75.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/parser/parse_extern_struct.of
---
Ok
