tests/snapshots/validator_snapshots__validator_all@validator-76.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/parser/parse_type_alias_union.of
---
Ok
