tests/snapshots/validator_snapshots__validator_all@validator-77.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/parser/parse_type_alias_with_generics.of
---
Ok
