tests/snapshots/validator_snapshots__validator_all@validator-78.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/parser/parse_type_decl_unit.of
---
Ok
