tests/snapshots/validator_snapshots__validator_all@validator-8.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/language/08_interfaces.of
---
ValidationErrors(
    [
        "module 'test_module' imports unknown module 'of:core'",
        "unknown variable 'print' in function 'test_module::show'",
    ],
)
