tests/snapshots/validator_snapshots__validator_all@validator-81.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/parser/parse_type_expr_primitive.of
---
Ok
