tests/snapshots/validator_snapshots__validator_all@validator-83.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/parser/parse_type_expr_function_type.of
---
Ok
