tests/snapshots/validator_snapshots__validator_all@validator-84.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/spec/01_type_system/union_error_pattern.of
---
ValidationErrors(
    [
        "type mismatch in function 'test_module::divide' (field code): expected 'int32', found 'int64'",
    ],
)
